--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
     <script src="main.js" defer></script>
     <title>Projeto to-do-list</title>
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <h1>Taks List</h1>
+      <div>
+        <input type="text" />
+        <button>Adicionar</button>
+      </div>
+      <ul>
+        <li>
+          <img src="img/check.png" alt="" />
+          <p>Comprar Pão</p>
+          <img src="img/delet.png" alt="" />
+        </li>
+      </ul>
+    </main>
+  </body>
 </html>
