--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   <body>
     <main class="container">
       <h1>Taks List</h1>
-      <div>
-        <input type="text" />
+      <div class="container-input">
+        <input type="text" placeholder="Informe uma tarefa" />
         <button>Adicionar</button>
       </div>
       <ul>
+        <li>
+          <img src="img/check.png" alt="" />
+          <p>Comprar Pão</p>
+          <img src="img/delet.png" alt="" />
+        </li>
         <li>
           <img src="img/check.png" alt="" />
           <p>Comprar Pão</p>
