css finalizado completo

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <button>Adicionar</button>
       </div>
       <ul>
-        <li>
+        <li class="taks">
           <img src="img/check.png" alt="" />
           <p>Comprar Pão</p>
           <img src="img/delet.png" alt="" />
         </li>
-        <li>
+        <li class="taks">
           <img src="img/check.png" alt="" />
           <p>Comprar Pão</p>
           <img src="img/delet.png" alt="" />
