--- a/index.html
+++ b/index.html
@@ -11,21 +11,10 @@
     <main class="container">
       <h1>Taks List</h1>
       <div class="container-input">
-        <input type="text" placeholder="Informe uma tarefa" />
-        <button>Adicionar</button>
+        <input type="text" placeholder="Informe uma tarefa" class="input" />
+        <button class="btn">Adicionar</button>
       </div>
-      <ul>
-        <li class="taks">
-          <img src="img/check.png" alt="" />
-          <p>Comprar Pão</p>
-          <img src="img/delet.png" alt="" />
-        </li>
-        <li class="taks">
-          <img src="img/check.png" alt="" />
-          <p>Comprar Pão</p>
-          <img src="img/delet.png" alt="" />
-        </li>
-      </ul>
+      <ul class="taks-list"></ul>
     </main>
   </body>
 </html>
