--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <title>Projeto to-do-list</title>
   </head>
   <body>
+    <!-- Container principal -->
     <main class="container">
       <h1>Taks List</h1>
+
+      <!-- Container contendo o input e o botao -->
       <div class="container-input">
         <input type="text" placeholder="Informe uma tarefa" class="input" />
         <button class="btn">Adicionar</button>
       </div>
+
+      <!-- lista das tarrefas -->
       <ul class="taks-list"></ul>
     </main>
   </body>
